--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -593,6 +593,25 @@
 
                 "Outputs Common Settings": "Общие настройки выходов",
 
+                "Output Mode": "Режим работы выхода",
+                "0..100 % 🠚 0..20 mA": "0..100 % 🠚 0..20 мА",
+                "0..100 % 🠚 4..20 mA": "0..100 % 🠚 4..20 мА",
+                "Custom Limits": "Пользовательские границы",
+
+                "Output Limits": "Граничные значения",
+                "Current at 0% Proccess Value (mA)": "Значение выходного тока при 0% уровне (мА)",
+                "Current at 100% Proccess Value (mA)": "Значение выходного тока при 100% уровне (мА)",
+                "level_0_current_description": "Если канал выключен либо значение установлено на 0%, выходной ток будет соответствовать заданному значению",
+                "level_100_current_description": "Если значение канала установлено на 100%, выходной ток будет соответствовать заданному значению",
+
+                "Proccess Value Rates": "Плавное изменение значения",
+                "Decrement Rate (ms/%)": "Темп изменения значения в сторону уменьшения (мс/%)",
+                "Increment Rate (ms/%)": "Темп изменения значения в сторону увеличения (мс/%)",
+                "Changing Rate for Long Press Actions (ms/%)": "Темп изменения значения при долгих нажатиях (мс/%)",
+                "decrement_rate_description": "При скачкообразном изменении значения, выходной уровень будет уменьшаться на 1% через указанный период времени. При 0 значении, уровень уменьшится мгновенно",
+                "increment_rate_description": "При скачкообразном изменении значения, выходной уровень будет увеличиваться на 1% через указанный период времени. При 0 значении, уровень увеличится мгновенно",
+                "action_repeat_time_description": "Во время долгих действий, выходной уровень будет изменяться на 1% через указанный период времени",
+
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
                 "Supply voltage": "Напряжение питания",
@@ -609,11 +628,7 @@
 
                 "input_hold_time_description": "Если нажатие длится больше указанного времени - считаем его длинным",
                 "input_double_time_description": "Если за указанное время второго нажатия не было - считаем нажатие одиночным. 0 - отключит все нажатия кроме короткого и длинного. Вносит задержку в реакцию на короткое нажатие",
-                "input_debounce_time_description": "Должно быть в 5-10 раз меньше, чем время ожидания второго нажатия. Вносит задержку в реакцию на нажатия",
-
-                "decrease_rate_description": "Во время плавных переходов, выходной уровень будет уменьшаться на 1% через указанный период времени. При 0 значении, уровень уменьшится мгновенно",
-                "increase_rate_description": "Во время плавных переходов, выходной уровень будет увеличиваться на 1% через указанный период времени. При 0 значении, уровень увеличится мгновенно",
-                "action_repeat_time_description": "Во время долгих действий, выходной уровень будет изменяться на 1% через указанный период времени"
+                "input_debounce_time_description": "Должно быть в 5-10 раз меньше, чем время ожидания второго нажатия. Вносит задержку в реакцию на нажатия"
             }
         }
     }
