--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -117,7 +117,6 @@
             {
                 "id": "input_{{ch_number + 1}}_mode",
                 "title": "Input Mode",
-                "description": "input_mode_description",
                 "address": {{416 + ch_number}},
                 "reg_type": "holding",
                 "required": true,
@@ -283,7 +282,6 @@
             {
                 "id": "output_{{ch_number}}_mode",
                 "title": "Output Mode",
-                "description": "output_mode_description",
                 "address": {{1160 + ch_number}},
                 "reg_type": "holding",
                 "required": true,
@@ -446,7 +444,7 @@
             {% endfor -%}
             {% for index in range(0, OUTPUTS_NUMBER) -%}
             {
-                "name": "Channel {{index + 1}} Switch",
+                "name": "Channel {{index + 1}}",
                 "reg_type": "coil",
                 "address": {{index}},
                 "type": "switch",
@@ -457,6 +455,7 @@
                 "reg_type": "holding",
                 "address": {{index}},
                 "type": "range",
+                "units": "%",
                 "max": 100,
                 "scale": 0.1,
                 "group": "gg_output_{{index + 1}}_channels"
@@ -477,7 +476,18 @@
                 "address": {{16 + index}},
                 "type": "switch",
                 "sporadic": true,
-                "group": "gg_output_{{index + 1}}_channels"
+                "group": "gg_output_{{index + 1}}_channels",
+                "condition": "output_{{index + 1}}_mode==1||output{{index + 1}}_min>=4"
+            },
+            {
+                "name": "Channel {{index + 1}} Duty Cycle Raw",
+                "reg_type": "holding",
+                "address": {{90 + index}},
+                "type": "value",
+                "enabled": false,
+                "min": 0,
+                "max": 2400,
+                "group": "debug"
             },
             {% endfor -%}
             {
@@ -534,19 +544,7 @@
                 "type": "voltage",
                 "enabled": false,
                 "group": "hw_info"
-            },
-            {% for index in range(0, OUTPUTS_NUMBER) -%}
-            {
-                "name": "Channel {{index + 1}} Duty Cycle Raw",
-                "reg_type": "holding",
-                "address": {{90 + index}},
-                "type": "value",
-                "enabled": true,
-                "min": 0,
-                "max": 2400,
-                "group": "debug"
-            }{% if not loop.last %},{% endif %}
-            {% endfor -%}
+            }
         ],
         "translations": {
             "en": {
@@ -554,10 +552,6 @@
                 "pwm_frequency_factor_description": "PWM frequency is calculated by formula: 20 kHz / Factor ",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)",
-
-                {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
-                "Channel {{ch_number}}": "Channel {{ch_number}}",
-                {% endfor -%}
 
                 "input_hold_time_description": "Presses that last longer than the specified time are counted as long presses",
                 "input_double_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
@@ -571,10 +565,14 @@
                 "General": "Общее",
                 "HW Info": "Данные модуля",
                 "Debug": "Диагностика",
-                "PWM Frequency Factor": "Делитель частоты ШИМ",
-                "pwm_frequency_factor_description": "Частота ШИМ рассчитывается по формуле: 20 кГц / Делитель",
                 "Baud rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+
+                "Input Mode": "Режим работы входа",
+                "Button": "Кнопка без фиксации",
+                "Switch": "Выключатель с фиксацией",
+                "Action when Switch is On": "Действие в положении \"включено\"",
+                "Action when Switch is Off": "Действие в положении \"выключено\"",
 
                 {% for ch_number in range(1, INPUTS_NUMBER + 1) -%}
                 "Input {{ch_number}}": "Вход {{ch_number}}",
@@ -588,29 +586,46 @@
                 {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
                 "Output {{ch_number}}": "Выход {{ch_number}}",
                 "Channel {{ch_number}}": "Канал {{ch_number}}",
+                "Channel {{ch_number}} Process Value": "Уровень канала 1",
+                "Channel {{ch_number}} Current": "Ток канала 1",
+                "Channel {{ch_number}} Fault": "Обрыв цепи канала 1",
                 "Channel {{ch_number}} Duty Cycle Raw": "Прямое задание скважности ШИМ на выходе {{ch_number}}",
                 {% endfor -%}
 
-                "Outputs Common Settings": "Общие настройки выходов",
+                "Short Press Action": "Действие для короткого нажатия",
+                "Long Press Action": "Действие для длинного нажатия",
+                "Double Press Action": "Действие для двойного нажатия",
+                "Short Long Press Action": "Действие для короткого, затем длинного нажатия",
+
+                "No Action": "Ничего не делать",
+                "All Outputs": "Все выходы",
+                "Turn Off": "Выключить",
+                "Turn On": "Включить",
+                "Toggle": "Переключить",
+                "Decrease Process Value": "Уменьшить уровень",
+                "Increase Process Value": "Увеличить уровень",
+                "Increase/Decrease Process Value": "Увеличить/уменьшить уровень",
+                "Output Number": "Номер выхода",
+                "Action": "Действие",
 
                 "Output Mode": "Режим работы выхода",
                 "0..100 % 🠚 0..20 mA": "0..100 % 🠚 0..20 мА",
                 "0..100 % 🠚 4..20 mA": "0..100 % 🠚 4..20 мА",
                 "Custom Limits": "Пользовательские границы",
 
-                "Output Limits": "Граничные значения",
+                "Output Limits": "Рабочий диапазон",
                 "Current at 0% Process Value (mA)": "Значение выходного тока при 0% уровне (мА)",
                 "Current at 100% Process Value (mA)": "Значение выходного тока при 100% уровне (мА)",
-                "level_0_current_description": "Если канал выключен либо значение установлено на 0%, выходной ток будет соответствовать заданному значению",
-                "level_100_current_description": "Если значение канала установлено на 100%, выходной ток будет соответствовать заданному значению",
+                "level_0_current_description": "Если канал выключен либо уровень установлен на 0%, выходной ток будет соответствовать заданному значению",
+                "level_100_current_description": "Если уровень установлен на 100% и канал включен, выходной ток будет соответствовать заданному значению",
 
-                "Process Value Rates": "Плавное изменение значения",
-                "Decrement Rate (ms/%)": "Темп изменения значения в сторону уменьшения (мс/%)",
-                "Increment Rate (ms/%)": "Темп изменения значения в сторону увеличения (мс/%)",
-                "Changing Rate for Long Press Actions (ms/%)": "Темп изменения значения при долгих нажатиях (мс/%)",
-                "decrement_rate_description": "При скачкообразном изменении значения, выходной уровень будет уменьшаться на 1% через указанный период времени. При 0 значении, уровень уменьшится мгновенно",
-                "increment_rate_description": "При скачкообразном изменении значения, выходной уровень будет увеличиваться на 1% через указанный период времени. При 0 значении, уровень увеличится мгновенно",
-                "action_repeat_time_description": "Во время долгих действий, выходной уровень будет изменяться на 1% через указанный период времени",
+                "Process Value Rates": "Плавное изменение уровня",
+                "Decrement Rate (ms/%)": "Темп изменения уровня в сторону уменьшения (мс/%)",
+                "Increment Rate (ms/%)": "Темп изменения уровня в сторону увеличения (мс/%)",
+                "Changing Rate for Long Press Actions (ms/%)": "Темп изменения уровня при долгих нажатиях (мс/%)",
+                "decrement_rate_description": "При скачкообразном изменении уровня или выключении канала, уровень будет плавно уменьшаться с заданным темпом. При значении 0, уровень уменьшится мгновенно",
+                "increment_rate_description": "При скачкообразном изменении уровня или включении канала, уровень будет плавно увеличиваться с заданным темпом. При значении 0, уровень увеличится мгновенно",
+                "action_repeat_time_description": "Во время долгих действий (при удержании кнопки), уровень будет изменяться с заданным темпом",
 
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
@@ -623,8 +638,6 @@
                 "Long Press Time (ms)": "Время длинного нажатия (мс)",
                 "Second Press Waiting Time (ms)": "Время ожидания второго нажатия (мс)",
                 "Debounce Time (ms)": "Время подавления дребезга (мс)",
-
-                "input_mode_description": "Режим работы входа по умолчанию - кнопка без фиксации. Работа в режиме выключателя с фиксацией доступна с версии прошивки 2.5.0",
 
                 "input_hold_time_description": "Если нажатие длится больше указанного времени - считаем его длинным",
                 "input_double_time_description": "Если за указанное время второго нажатия не было - считаем нажатие одиночным. 0 - отключит все нажатия кроме короткого и длинного. Вносит задержку в реакцию на короткое нажатие",
