add output description

--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -76,6 +76,7 @@
             {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
             {
                 "title": "Output {{ ch_number }}",
+                "description": "output_description",
                 "id": "g_output_{{ ch_number }}"
             },
             {
@@ -608,6 +609,7 @@
                 "Output Number": "Номер выхода",
                 "Action": "Действие",
 
+                "output_description": "Для управления выходом могут быть использованы два способа:<br>1) задание границ рабочего диапазона и управление уровнем в процентах между этими границами<br>2) прямое задание тока выхода в мА<br>Использование двух способов одновременно не допускается.",
                 "Output Mode": "Режим работы выхода",
                 "0..100 % 🠚 0..20 mA": "0..100 % 🠚 0..20 мА",
                 "0..100 % 🠚 4..20 mA": "0..100 % 🠚 4..20 мА",
